app/frontend/app/globals.css
/* ... */
/* Div for scrape pagination page display on small screens */
.pagination-page-display-small {
  display: none;
  margin: 0 9px;
  font-weight: 600;
  color: #f1f1f1;
}

/* Div that displays the current pagination page on scrape page */
.pagination-page-display {
  display: flex;
  color: white;
  margin: 0 4px;
}

/* Link container for item in full-scrape-list */
.full-scrape-link {
  text-decoration: none !important;
}

/* Individual item in full-scrape-list */
.full-scrape-list-item {
  background-color: var(--dark-bg-color);
  background: linear-gradient(to bottom right, #242424, #181818);
  border-radius: 10px;
  margin-bottom: 8px;
  border: 1px solid rgba(190, 190, 190, 0.25);
  /* box-shadow: 0px 0px 5px rgba(190, 190, 190, 0.5); */
}

.full-scrape-list-item:hover,
.full-scrape-link:focus .full-scrape-list-item {
  background: none;
  background-color: rgb(54, 54, 54);
  text-decoration: none !important;
  border: 1px solid rgb(255, 255, 255);
  box-shadow: 0px 0px 5px white;
  transition: 0.2s;
}

/* Text for item in full-scrape-list */
.full-scrape-list-item-text {
  padding: 3px 10px 5px;
}

.full-scrape-list-item-text:hover {
  color: white;
}

/* Timestamp text for item in full-scrape-list */
.full-scrape-list-item-timestamp {
  color: rgb(170, 170, 170);
}

/* Text to show amount of products for item in full-scrape-list */
.full-scrape-list-title-product {
  color: rgb(240, 240, 240);
}

/* Span class to make sure number of products and "Product(s)" remain on the same line */
.full-scrape-list-title-product-span {
  display: inline;
  white-space: nowrap;
}

/* Text color for GPU scrapes */
.color-text-gpu {
  color: var(--gpu-color);
}

/* Text color for CPU-Gaming scrapes */
.color-text-cpu-g {
  color: var(--cpu-g-color);
}

/* Text color for CPU-Normal (Multithread) scrapes */
.color-text-cpu-n {
  color: var(--cpu-n-color);
}

/* Currently unused border colors representing the scrape type */
/* Border color for GPU scrape full-scrape-list-item */
/* .color-border-gpu {
  border: 2px solid var(--gpu-color);
  box-shadow: 0px 0px 5px var(--gpu-color);
} */

/* Border color for CPU-Gaming scrape full-scrape-list-item */
/* .color-border-cpu-g {
  border: 2px solid var(--cpu-g-color);
  box-shadow: 0px 0px 5px var(--cpu-g-color);
} */

/* Border color for CPU-Normal (Multithread) scrape full-scrape-list-item */
/* .color-border-cpu-n {
  border: 2px solid var(--cpu-n-color);
  box-shadow: 0px 0px 5px var(--cpu-n-color);
} */

/* Color for GPU scrape type titles in Completed Scrapes */
.title-text-gpu {
  background-color: var(--gpu-color);
  background: -webkit-linear-gradient(#0d9c00, #c7ffa1);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Color for CPU-Gaming scrape type titles in Completed Scrapes */
.title-text-cpu-g {
  background-color: var(--cpu-g-color);
  background: -webkit-linear-gradient(#b6a750, #fffec1);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Color for CPU-Normal (Multithread) scrape type titles in Completed Scrapes */
.title-text-cpu-n {
  background-color: var(--cpu-n-color);
  background: -webkit-linear-gradient(#be0029, #ff6060);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Button to show all Completed Scrapes that appears when sidebar gets hidden */
.view-all-scrapes-button {
  display: flex;
  margin-left: auto;
  font-size: 22px;
  background-color: rgb(3, 151, 232);
  background: linear-gradient(
    to top left,
    rgb(77, 238, 253) 0.7%,
    rgb(3, 151, 232) 26.1%,
    rgb(47, 31, 116) 95.7%
  );
  padding-top: 1px !important;
  color: #ffffff;
  border-color: #f1f1f1;
}

.view-all-scrapes-button:hover,
.view-all-scrapes-button:focus {
  border-color: #ffffff;
  box-shadow: 0px 0px 8px 1px #ffffff;
}

.view-all-scrapes-button:active {
  color: rgb(50, 50, 50);
}

/* Container for Completed Scrapes h1 tag and View All Scrapes button */
.scrapes-header-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0 !important;
}

/* Title for Completed Scrape type */
.scrape-title {
  margin-top: -10px;
  margin-bottom: 0 !important;
  line-height: 140%;
}

/* Title showing list of products in Completed Scrape */
.scrape-title-product-list {
  margin-bottom: 10px !important;
  line-height: 100%;
  color: #e1e6eb;
}

/* Title showing timestamp of when Completed Scrape was made */
.scrape-timestamp {
  margin-bottom: 13px !important;
  color: rgb(104, 170, 255);
  line-height: 100%;
}

/* Change background color of every other row in tables with "role=grid" */
table[role="grid"] tbody tr:nth-child(odd) {
  background-color: rgba(87, 87, 87, 0.225);
}

/* Change color of border-bottom for every table row */
td {
  border-bottom-color: rgba(35, 35, 35, 0.2);
}

/* Table for Completed Scrape and Benchmark data */
.listing-table {
  margin-top: 15px;
  background-color: #1b1b1f;
  background: linear-gradient(to bottom left, #262626, #181818);
  border-radius: 10px;
}

.listing-table td {
  padding-right: 15px;
  padding-left: 15px;
}

/* Table Heading for Completed Scrape and Benchmark data */
.listing-table-head {
  padding-top: 4px;
  padding-bottom: 14px;
  padding-right: 15px;
  padding-left: 15px;
  background-color: #1b1b1f;
  background: linear-gradient(to bottom, #262626, #181818);
  color: #fcfcfc;
}

/* Left-most Table Heading in listing-table-head */
.listing-table-head-first {
  border-top-left-radius: 10px;
  padding-left: 20px;
}

/* Right-most Table Heading in listing-table-head */
.listing-table-head-last {
  border-top-right-radius: 10px;
}

/* Cells in the Price column for Completed Scrapes */
.price-cell {
  color: white;
  white-space: nowrap;
}

/* Detailed Product Name for GPU Completed Scrapes */
.gpu-product-text {
  color: rgb(233, 233, 233);
}
/* ... */

